--- a/views/rps_game.erb
+++ b/views/rps_game.erb
@@ -1,1 +1,8 @@
 <h1>WELCOME TO ROCK PAPER SCISSORS</h1>
+<p>
+  You threw <%= @user_play %>
+</p>
+<p>
+  The computer threw <%= @computer_play %>
+</p>
+<h2>You <%= @result %>!</h2>
